Refactor calculator code to enhance readability and maintainability by replacing switch expressions with switch statements, updating data structures for immutability, and improving error handling.